--- a/metafenliu.ini
+++ b/metafenliu.ini
@@ -170,7 +170,7 @@ custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|hk|香港|\\bHK\\b|hongkon
 custom_proxy_group=🇹🇼 TW`url-test`(?i)(🇹🇼|tw|台湾|\\bTW\\b|taiwan|taipei|hinet)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|jp|日本|\\bJP\\b|tokyo|osaka)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|sg|新加坡|\\bSG\\b|singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|\\bUS\\b|united states|los angeles|san jose|seattle|new york)`http://www.gstatic.com/generate_204`300,,50
-; 冷门节点池（排除 HK/JP/TW/US/SG）——selector 手动选择
+custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|us|美国|\\bUS\\b|united states|los angeles|san jose|seattle|new york)`http://www.gstatic.com/generate_204`300,,50
+; 冷门节点池（排除 HK/JP/TW/US/SG/hk/jp/tw/us/sg）——selector 手动选择
 ; 说明：用负向匹配把五大区节点剔除，剩余即“冷门”
-custom_proxy_group=🧊 冷门节点`select`(?i)^(?!.*(🇭🇰|香港|\\bHK\\b|hong\\s*kong|🇯🇵|日本|\\bJP\\b|tokyo|osaka|🇹🇼|台湾|\\bTW\\b|taiwan|taipei|hinet|🇸🇬|新加坡|\\bSG\\b|singapore|🇺🇸|美国|\\bUS\\b|united\\s*states|los\\s*angeles|san\\s*jose|seattle|new\\s*york)).*
+custom_proxy_group=🧊 冷门节点`select`(?i)^(?!.*(🇭🇰|hk|香港|\\bHK\\b|hong\\s*kong|🇯🇵|jp|日本|\\bJP\\b|tokyo|osaka|🇹🇼|tw|台湾|\\bTW\\b|taiwan|taipei|hinet|🇸🇬|sg|新加坡|\\bSG\\b|singapore|🇺🇸|us|美国|\\bUS\\b|united\\s*states|los\\s*angeles|san\\s*jose|seattle|new\\s*york)).*
